unpackaged/main/default/objects/Advisor_Involvement__c/Advisor_Involvement__c.object-meta.xml
<CustomObject>
    <label>Advisor Involvement</label>
    <nameField>
        <displayFormat>AI - {0}</displayFormat>
        <label>Advisor Involvement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advisor Involvements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>