unpackaged/main/default/objects/Advisor_Involvement__c/fields/Date_Fees_Paid__c.field-meta.xml
<CustomField>
    <fullName>Date_Fees_Paid__c</fullName>
    <label>Date Fees Paid</label>
    <type>Date</type>
</CustomField>