unpackaged/main/default/objects/Advisor_Involvement__c/fields/Diligence_Expense_Actuals_USD__c.field-meta.xml
<CustomField>
    <fullName>Diligence_Expense_Actuals_USD__c</fullName>
    <label>Diligence Expense Actuals</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>