unpackaged/main/default/objects/Advisor_Involvement__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Either Fund or Pipeline is selected at a time</description>
    <label>Fund</label>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>Advisor Involvements</relationshipLabel>
    <relationshipName>Advisor_Involvement</relationshipName>
    <type>Lookup</type>
</CustomField>