unpackaged/main/default/objects/Advisor_Involvement__c/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <label>Legal Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Advisor Involvements</relationshipLabel>
    <relationshipName>Advisor_Involvement</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>