unpackaged/main/default/objects/Advisor_Involvement__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Advisor Involvements</relationshipLabel>
    <relationshipName>Advisor_Involvement</relationshipName>
    <type>Lookup</type>
</CustomField>