unpackaged/main/default/objects/Advisor_Involvement__c/validationRules/PipelineOrFund.validationRule-meta.xml
<ValidationRule>
    <fullName>PipelineOrFund</fullName>
    <active>true</active>
    <description>Either Pipeline or Fund Look up is selected at a time</description>
    <errorConditionFormula>OR(AND(Fund__c &lt;&gt;&quot;&quot;,Pipeline__c&lt;&gt;&quot;&quot;),AND(Fund__c =&quot;&quot;,Pipeline__c=&quot;&quot;))</errorConditionFormula>
    <errorMessage>Please select either a Pipeline or a Fund.</errorMessage>
</ValidationRule>